# Hiring_Automation

./: .gitignore  Modelfile.txt  README.md  config.json  main.py  pyproject.toml  requirements.txt
app/: main.py
app/static/: index.html  style.css
static/: index.html  style.css
